hphp/hack/test/typecheck/strict_switch/just_int_class_const.php.exp
File "just_int_class_const.php", line 33, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "just_int_class_const.php", line 31, characters 10-13:
  `E::B` already handled here
File "just_int_class_const.php", line 46, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "just_int_class_const.php", line 44, characters 10-13:
  `E::A` already handled here
File "just_int_class_const.php", line 66, characters 10-13:
Switching on `int` but using constant from `G` (Typing[4023])
